# rag-chatbot-example

./: README.md  digger.yml  extract_data.py  main.ipynb  pyproject.toml  requirements.txt  using_hf.py  using_hf_local.py  using_openai.py
.github/workflows/: digger_workflow.yml
backend/: main.tf
data/: extracted.json
prod/: main.tf
testing/: extract_content.py  extract_headings.py  llm_playground.ipynb
